force-app/main/default/objects/Loan__c/fields/Available_Funds__c.field-meta.xml
<CustomField>
    <fullName>Available_Funds__c</fullName>
    <formula>Undisbursed_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Funds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>