force-app/main/default/objects/Loan__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <formula>(Balance_Fees__c + Balance_Interest__c + Balance_Principal__c)</formula>
    <label>Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>