force-app/main/default/objects/Loan__c/fields/Balance_Fees__c.field-meta.xml
<CustomField>
    <fullName>Balance_Fees__c</fullName>
    <label>Balance Fees</label>
    <summarizedField>Loan_Transaction__c.Balance_Fees__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Transaction__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Recovery</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>