force-app/main/default/objects/Loan__c/fields/Business_Licence__c.field-meta.xml
<CustomField>
    <fullName>Business_Licence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Licence</label>
    <type>Checkbox</type>
</CustomField>