force-app/main/default/objects/Loan__c/fields/Cash_Flow_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cash Flow Forecast</label>
    <type>Checkbox</type>
</CustomField>