force-app/main/default/objects/Loan__c/fields/Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Created Date</label>
    <type>Date</type>
</CustomField>