force-app/main/default/objects/Loan__c/fields/Day_Count__c.field-meta.xml
<CustomField>
    <fullName>Day_Count__c</fullName>
    <formula>Application__r.Day_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day Count</label>
    <type>Text</type>
</CustomField>