force-app/main/default/objects/Loan__c/fields/Financial_Information__c.field-meta.xml
<CustomField>
    <fullName>Financial_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Financial Information</label>
    <type>Checkbox</type>
</CustomField>