force-app/main/default/objects/Loan__c/fields/Fixed_Rate__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate__c</fullName>
    <formula>Application__r.Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>