force-app/main/default/objects/Loan__c/fields/Insurance_Order__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Order__c</fullName>
    <label>Insurance Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Order_Precedence</valueSetName>
    </valueSet>
</CustomField>