force-app/main/default/objects/Loan__c/fields/Interest_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>Interest_Calculation_Method__c</fullName>
    <formula>Application__r.Interest_Calculation_Method__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Calculation Method</label>
    <type>Text</type>
</CustomField>