force-app/main/default/objects/Loan__c/fields/Interest_Charged_writeoff__c.field-meta.xml
<CustomField>
    <fullName>Interest_Charged_writeoff__c</fullName>
    <label>Interest Charged</label>
    <summarizedField>WriteOff__c.Interest_Charged__c</summarizedField>
    <summaryForeignKey>WriteOff__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>