force-app/main/default/objects/Loan__c/fields/Interest_Compounding_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Interest_Compounding_Frequency__c</fullName>
    <formula>Application__r.Interest_Compounding_Frequency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Compounding Frequency</label>
    <type>Text</type>
</CustomField>