force-app/main/default/objects/Loan__c/fields/Interest_Product__c.field-meta.xml
<CustomField>
    <fullName>Interest_Product__c</fullName>
    <formula>Application__r.Interest_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Interest Product</label>
    <type>Text</type>
</CustomField>