force-app/main/default/objects/Loan__c/fields/Last_Interest_Charged_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Interest_Charged_Date__c</fullName>
    <label>Last Interest Charged Date</label>
    <type>Date</type>
</CustomField>