force-app/main/default/objects/Loan__c/fields/Loan_Product__c.field-meta.xml
<CustomField>
    <fullName>Loan_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loan Product</label>
    <referenceTo>Loan_Product__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>