force-app/main/default/objects/Loan__c/fields/Next_Payment_Due__c.field-meta.xml
<CustomField>
    <fullName>Next_Payment_Due__c</fullName>
    <label>Next Payment Due</label>
    <type>Date</type>
</CustomField>