force-app/main/default/objects/Loan__c/fields/Number_of_Payments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payments__c</fullName>
    <label>Number of Payments</label>
    <summaryFilterItems>
        <field>Loan_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loan_Transaction__c.IsReversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>