force-app/main/default/objects/Loan__c/fields/Payment_Account__c.field-meta.xml
<CustomField>
    <fullName>Payment_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Account</label>
    <referenceTo>Bank_Account__c</referenceTo>
    <relationshipLabel>Loans (Payment Account)</relationshipLabel>
    <relationshipName>Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>