force-app/main/default/objects/Loan__c/fields/Principal_Order__c.field-meta.xml
<CustomField>
    <fullName>Principal_Order__c</fullName>
    <label>Principal Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Order_Precedence</valueSetName>
    </valueSet>
</CustomField>