force-app/main/default/objects/Loan__c/fields/Recommitted_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recommitted_Amount__c</fullName>
    <label>Total Recommitted Amount</label>
    <summarizedField>Commitment_History__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Commitment_History__c.Type__c</field>
        <operation>equals</operation>
        <value>Recommitment</value>
    </summaryFilterItems>
    <summaryForeignKey>Commitment_History__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>