force-app/main/default/objects/Loan__c/fields/Refinanced__c.field-meta.xml
<CustomField>
    <fullName>Refinanced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refinanced</label>
    <type>Checkbox</type>
</CustomField>