force-app/main/default/objects/Loan__c/fields/Reversed_Disbursal__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Disbursal__c</fullName>
    <label>Reversed Disbursal</label>
    <summarizedField>Loan_Transaction__c.Total_Credit_P__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Transaction__c.Reversal_Type__c</field>
        <operation>equals</operation>
        <value>Disbursal</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>