force-app/main/default/objects/Loan__c/fields/Total_Credit__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit__c</fullName>
    <label>Total Credit</label>
    <summarizedField>Loan_Transaction__c.Total_Credit__c</summarizedField>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>