force-app/main/default/objects/Loan__c/fields/Total_Disbursed_Interest__c.field-meta.xml
<CustomField>
    <fullName>Total_Disbursed_Interest__c</fullName>
    <label>Total Disbursed Interest</label>
    <summarizedField>Loan_Transaction__c.Total_Disbursal_Interest__c</summarizedField>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>