force-app/main/default/objects/Loan__c/fields/Total_Fees_Positive__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Positive__c</fullName>
    <formula>Total_Fees__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Fees Positive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>