force-app/main/default/objects/Loan__c/fields/Total_Interest_Positive__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Positive__c</fullName>
    <formula>Total_Interest__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Positive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>