force-app/main/default/objects/Loan__c/fields/Total_Jobs_Created__c.field-meta.xml
<CustomField>
    <fullName>Total_Jobs_Created__c</fullName>
    <label>Total Jobs Created</label>
    <summarizedField>Loan_Impact__c.Number_of_Jobs__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Impact__c.Impact__c</field>
        <operation>equals</operation>
        <value>Created</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Impact__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>