force-app/main/default/objects/Loan__c/fields/Total_Paid_Positive__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Positive__c</fullName>
    <formula>Total_Paid__c * -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Paid Positive</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>