force-app/main/default/objects/Loan__c/fields/Total_Paid_Principal__c.field-meta.xml
<CustomField>
    <fullName>Total_Paid_Principal__c</fullName>
    <label>Total Paid Principal</label>
    <summarizedField>Scheduled_Transaction__c.Principal__c</summarizedField>
    <summaryFilterItems>
        <field>Scheduled_Transaction__c.Paid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Scheduled_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>