force-app/main/default/objects/Loan__c/fields/Total_Principal__c.field-meta.xml
<CustomField>
    <fullName>Total_Principal__c</fullName>
    <label>Total Principal</label>
    <summarizedField>Loan_Transaction__c.Balance_Principal__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Payment</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Loan_Transaction__c.IsReversed__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>