force-app/main/default/objects/Loan__c/fields/Total_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Rate__c</fullName>
    <formula>Application__r.Final_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>