force-app/main/default/objects/Loan__c/fields/Total_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Total_Reversed__c</fullName>
    <label>Total Reversed</label>
    <summarizedField>Loan_Transaction__c.Total_Debit__c</summarizedField>
    <summaryFilterItems>
        <field>Loan_Transaction__c.Type__c</field>
        <operation>equals</operation>
        <value>Reversal</value>
    </summaryFilterItems>
    <summaryForeignKey>Loan_Transaction__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>