force-app/main/default/objects/Loan__c/fields/Total_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Total_Transactions__c</fullName>
    <formula>Total_Credit__c - Total_Debit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Transactions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>