force-app/main/default/objects/Loan__c/fields/Undisbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Undisbursed_Amount__c</fullName>
    <formula>(Amount__c + Recommitted_Amount__c) -  (Decommitted_Amount__c +  Total_Disbursed__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Undisbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>