force-app/main/default/objects/Loan__c/fields/Written_Off_Amount__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Amount__c</fullName>
    <label>Written-Off Amount</label>
    <summarizedField>WriteOff__c.Write_Off_Amount__c</summarizedField>
    <summaryForeignKey>WriteOff__c.Loan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>