force-app/main/default/objects/Loan__c/fields/Written_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Written_Off_Date__c</fullName>
    <label>Written-Off Date</label>
    <summarizedField>WriteOff__c.Write_Off_Date__c</summarizedField>
    <summaryForeignKey>WriteOff__c.Loan__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>