force-app/main/default/objects/Loan__c/validationRules/After_disbursal_only_status_is_live.validationRule-meta.xml
<ValidationRule>
    <fullName>After_disbursal_only_status_is_live</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()  &amp;&amp; ISPICKVAL( PRIORVALUE( Status__c ),&quot;Pending&quot; ) &amp;&amp;  ISPICKVAL(  Status__c,&quot;Live&quot; ) &amp;&amp;  Balance__c ==0</errorConditionFormula>
    <errorMessage>Status can only be changed to &apos;Live&apos; after the funds are disbursed</errorMessage>
</ValidationRule>