force-app/main/default/objects/Loan__c/validationRules/After_live_cannot_be_pending.validationRule-meta.xml
<ValidationRule>
    <fullName>After_live_cannot_be_pending</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()  &amp;&amp; ISPICKVAL( PRIORVALUE( Status__c ),&quot;Live&quot; ) &amp;&amp;  ISPICKVAL(  Status__c,&quot;Pending&quot; ) &amp;&amp;  (Balance__c &gt; 0)</errorConditionFormula>
    <errorMessage>Status cannot be changed to &apos;Pending&apos;</errorMessage>
</ValidationRule>