force-app/main/default/objects/Loan__c/validationRules/After_pending_status_is_live_only.validationRule-meta.xml
<ValidationRule>
    <fullName>After_pending_status_is_live_only</fullName>
    <active>true</active>
    <errorConditionFormula>!ISNEW()  &amp;&amp; ISPICKVAL( PRIORVALUE( Status__c ),&quot;Pending&quot; ) &amp;&amp;  NOT(ISPICKVAL(  Status__c,&quot;Live&quot; ) || ISPICKVAL(  Status__c,&quot;Pending&quot; ))</errorConditionFormula>
    <errorMessage>Status can be only be changed to &apos;Live&apos;</errorMessage>
</ValidationRule>