force-app/main/default/objects/Loan__c/validationRules/Finalized_status_cannot_be_changed.validationRule-meta.xml
<ValidationRule>
    <fullName>Finalized_status_cannot_be_changed</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp;  (ISPICKVAL(PRIORVALUE(Status__c),&quot;Paid&quot;) &amp;&amp; !ISPICKVAL(Status__c,&quot;Paid&quot;) &amp;&amp;  Balance__c == 0) || (ISPICKVAL(PRIORVALUE(Status__c),&quot;Settled&quot;) &amp;&amp; !ISPICKVAL(Status__c,&quot;Settled&quot;))</errorConditionFormula>
    <errorMessage>Finalized loan can not be changed..</errorMessage>
</ValidationRule>