force-app/main/default/objects/Loan__c/validationRules/If_refinanced_status_cannot_be_live.validationRule-meta.xml
<ValidationRule>
    <fullName>If_refinanced_status_cannot_be_live</fullName>
    <active>true</active>
    <errorConditionFormula>AND (NOT(ISNEW()),ISPICKVAL(PRIORVALUE(Status__c),&quot;Refinanced&quot;), ISPICKVAL(Status__c,&quot;Live&quot;))</errorConditionFormula>
    <errorMessage>Status cannot set to be &apos;Live&apos;</errorMessage>
</ValidationRule>