force-app/main/default/objects/Loan__c/validationRules/New_Loan_must_be_Live.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Loan_must_be_Live</fullName>
    <active>true</active>
    <errorConditionFormula>AND (ISNEW(), NOT( ISPICKVAL( Status__c , &quot;Pending&quot;)))</errorConditionFormula>
    <errorMessage>New loans must have their status set to &apos;Pending&apos;</errorMessage>
</ValidationRule>