force-app/main/default/objects/Loan__c/validationRules/Reason_cannot_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_cannot_edited</fullName>
    <active>true</active>
    <description>If the reason is empty, it can be edited</description>
    <errorConditionFormula>PRIORVALUE(Reason__c)!=&quot;&quot;  &amp;&amp; ISCHANGED(Reason__c)</errorConditionFormula>
    <errorDisplayField>Reason__c</errorDisplayField>
    <errorMessage>Reason can&apos;t be changed</errorMessage>
</ValidationRule>